# himawari-render

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: build.yml  build2.yml  clean.yml  rust.yml  update.yml
core/: Cargo.toml  build-macos.sh  dasdf  simple.py  test.py
core/include/: himawari-render.h  module.modulemap
core/src/: bin.rs  fetch.rs  himawari_render.h  lib.rs
docs/: index.html
himawari-macos/: himawari_render-Bridging-Header.h
himawari-macos/himawari-macos/: ContentView.swift  Wallpaper.swift  himawari_macosApp.swift
himawari-macos/himawari-macos.xcodeproj/: project.pbxproj
himawari-macos/himawari-macos.xcodeproj/project.xcworkspace/xcuserdata/paulcolusso.xcuserdatad/: UserInterfaceState.xcuserstate
himawari-macos/himawari-macos.xcodeproj/xcuserdata/paulcolusso.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos-frontend/: .gitignore  Package.swift
macos-frontend/dependencies/: Package.resolved  Package.swift  README.md
macos-frontend/dependencies/Sources/dependencies/: dependencies.swift
macos-frontend/dependencies/Tests/: LinuxMain.swift
macos-frontend/dependencies/Tests/dependenciesTests/: XCTestManifests.swift  dependenciesTests.swift
macos-frontend/macos-frontend/: AppDelegate.swift  Bridging-Header.h  Info.plist  ViewController.swift
macos-frontend/macos-frontend.xcodeproj/: project.pbxproj
macos-frontend/macos-frontend.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macos-frontend/macos-frontend.xcodeproj/xcshareddata/xcschemes/: macos-frontend-Package.xcscheme
macos-frontend/macos-frontend/Assets.xcassets/globe.imageset/: Contents.json
macos-frontend/macos-frontend/Base.lproj/: Main.storyboard
src/: main.rs
windows-frontend/: windows-frontend.sln
windows-frontend/windows-frontend/: Program.cs  Resources.Designer.cs  Resources.resx  Tray.Designer.cs  Tray.cs  TrayView.Designer.cs  TrayView.cs  windows-frontend.csproj
windows-frontend/windows-frontend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
(+1 files in other folders)
