[package]
name = "himawari-render"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
simple-error = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.17"
image = "0.21.1"

[lib]
name = "himawari_render"
crate-type = ["staticlib", "cdylib"]