[package]
name = "himawari-render"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

[dependencies]
chrono  = { version = "0.4", features = ["serde"] }
serde   = { version = "1.0.135", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"] }
image = "0.23.14"
anyhow = "1.0.53"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { version = "0.3.19" }
tokio   = { version = "1.15.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.1" }
js-sys = "0.3.56"
web-sys = { version = "0.3.55", features=[
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "ImageData",
    "Response",
    "Window",
    "console"
]}

[lib]
name = "himawari_render"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "himwari_cli"
path = "src/bin.rs"

[features]
wasm = []